--- a/src/NuGetGallery/Views/Pages/Home.cshtml
+++ b/src/NuGetGallery/Views/Pages/Home.cshtml
@@ -3,3 +3,67 @@
     ViewBag.Tab = "Home";
 }
 @ViewBag.Content
+
+<div class="featured">
+    <p>
+        <h1>Welcome to the PowerShell Gallery</h1>
+        <p>
+            The PowerShell Gallery is the central repository for PowerShell content.
+            You can find new PowerShell commands or Desired State Configuration (DSC) resources in the Gallery.
+        </p>
+    </p>
+
+    <p class="info">
+        <h1>Getting Started with the Gallery</h1>
+        <p>
+            Installing items from the Gallery requires the latest version of the PowerShellGet module,
+            which is available in Windows 10, in Windows Management Framework (WMF) 5.0,
+            or in the MSI-based installer (for PowerShell 3 and 4).
+        </p>
+    </p>
+    <p class="nuget-badge">
+        <a class="btn btn-big signin-external-link install-wmf" href="http://go.microsoft.com/fwlink/?LinkId=398175" target="_blank">
+            Get WMF 5.0
+        </a>
+    </p>
+    <p class="nuget-badge">
+        <a class="btn btn-big signin-external-link install-wmf" href="http://go.microsoft.com/fwlink/?LinkID=746217&amp;clcid=0x409" target="_blank">
+            Get MSI Installer
+        </a>
+    </p>
+    <p class="info">
+        <p>
+            With the latest <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409">PowerShellGet</a> module, you can:
+        </p><ul style="margin-top:-15px">
+            <li>
+                Search through items in the Gallery with
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Find-Module</b></a> and
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Find-Script</b></a>
+            </li>
+            <li>
+                Save items to your system from the Gallery with
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Save-Module</b></a> and
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Save-Script</b></a>
+            </li>
+            <li>
+                Install items from the Gallery with
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Install-Module</b></a> and
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Install-Script</b></a>
+            </li>
+            <li>
+                Upload items to the Gallery with
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Publish-Module</b></a> and
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Publish-Script</b></a>
+            </li>
+            <li>
+                Add your own custom repository with
+                <a href="http://go.microsoft.com/fwlink/?LinkID=760387&amp;clcid=0x409"><b>Register-PSRepository</b></a>
+            </li>
+        </ul>
+        Check out the <a href="http://powershellgallery.com/GettingStarted">Getting Started</a> page for more
+        information on how to use PowerShellGet commands with the Gallery.
+        You can also run <i>Update-Help -Module PowerShellGet</i> to install local help for these commands.
+        <br>
+        <p></p>
+    </p>
+</div>
